Fixed word breaks in tooltips + Fixed cursor style on icon links

--- a/gui/static/gui/css/typography.css
+++ b/gui/static/gui/css/typography.css
@@ -77,8 +77,3 @@ a.btn-icon-eye-close:after {
 a.btn-text {
   color: #333333;
 }
-
-/* line 80, ../scss/typography.scss */
-[class^="icon-"]:before, [class*=" icon-"]:before {
-  cursor: default;
-}
